# rg-search

./: README  README.en.md  README.md  README_EN.md  README_GUI.md  requirements.txt  rgs-pro.py  rgs.py  rgs_gui.py
.github/workflows/: Build rg-search native  Build rg-search native.yml
rgs-native/: CMakeLists.txt  Makefile  README.md  README_EN.md  build_linux.sh  build_windows_mingw.bat  rgs
rgs-native/src/: rgs.cpp
