cmake_minimum_required(VERSION 3.16)
project(rgs_native LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(rgs src/rgs.cpp)
if (MSVC)
  target_compile_options(rgs PRIVATE /O2 /DNDEBUG)
  target_link_libraries(rgs PRIVATE ws2_32)
else()
  target_compile_options(rgs PRIVATE -O3 -DNDEBUG)
  target_link_libraries(rgs PRIVATE pthread)
endif()
